# cmake_python_r_example

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: FindR.cmake
examples/python/: example.py
src/CppLib/: CMakeLists.txt
src/CppLib/include/CppLib/: myclass.h  myfunction.h
src/CppLib/src/: myclass.cpp  myfunction.cpp
src/Python/: CMakeLists.txt  __init__.py.in  getwheelname.py.in  myclass_bindings.cpp  setup.py.in
src/Python/py/: __init__.py.in  extension.py
src/Python/src/: conversions.hpp  myclass_bindings.cpp
src/RPackage/: CMakeLists.txt  DESCRIPTION.in
src/RPackage/R/: RCppLib-package.R
src/RPackage/src/: myclass_export.cpp
tests/Python/: CMakeLists.txt  test_sample.py
tests/R/: CMakeLists.txt  test_package.R
